--- a/app/views/reservation_mailer/notify_guest_of_confirmation.text.liquid
+++ b/app/views/reservation_mailer/notify_guest_of_confirmation.text.liquid
@@ -15,6 +15,13 @@ When:
 
 Total: {{ reservation.total_price }}
 
+{% if listing.has_seller_attachments? %}
+{{ 'seller_attachments.associated_with_order' | translate }}:
+  {% for attachment in listing.attachments %}
+{{ attachment.title }}: {{ attachment.attachment_url }}
+  {% endfor %}
+{% endif %}
+
 You can manage your booking here: {{ platform_context.host | append:user.bookings_dashboard_url_with_tracking_and_token | append:signature_for_tracking }}
 
 We're always happy to help! If you have any questions about your booking, please send an email to {{ platform_context.support_email }} or contact us at {{ platform_context.phone_number }}.
