--- a/app/views/instance_admin/manage/workflows/workflow_alerts/_form.html.haml
+++ b/app/views/instance_admin/manage/workflows/workflow_alerts/_form.html.haml
@@ -18,25 +18,25 @@
       %h4 Email Settings
       .row
         .input-container.col-xs-6
-          = f.input :template_path, collection: @custom_emails, disabled: true, required: true, input_html: { class: 'form-control' }, hint: "You can add custom emails in Manage -> Emails"
+          = f.input :template_path, collection: @custom_emails, required: true, input_html: { class: 'form-control' }, hint: "You can add custom emails in Manage -> Emails"
         .input-container.col-xs-6
-          = f.input :layout_path, collection: @custom_email_layouts, disabled: true, required: true, input_html: { class: 'form-control' }, hint: "You can add custom layout in Manage -> Email Layouts"
+          = f.input :layout_path, collection: @custom_email_layouts, required: true, input_html: { class: 'form-control' }, hint: "You can add custom layout in Manage -> Email Layouts"
       .row
         .input-container.col-xs-6
-          = f.input :cc, disabled: true, required: true, input_html: { class: 'form-control' }, placeholder: 'email1@example.com, email2@example.com...'
+          = f.input :cc, required: true, input_html: { class: 'form-control' }, placeholder: 'email1@example.com, email2@example.com...'
         .input-container.col-xs-6
-          = f.input :bcc, disabled: true, required: true, input_html: { class: 'form-control' }, placeholder: 'email1@example.com, email2@example.com...'
+          = f.input :bcc, required: true, input_html: { class: 'form-control' }, placeholder: 'email1@example.com, email2@example.com...'
       .row
         .input-container.col-xs-6
-          = f.input :reply_to, disabled: true, input_html: { class: 'form-control' }, placeholder: 'email1@example.com, email2@example.com...'
+          = f.input :reply_to, input_html: { class: 'form-control' }, placeholder: 'email1@example.com, email2@example.com...'
         .input-container.col-xs-6
-          = f.input :reply_to_type, collection: f.object.recipient_types, disabled: true, include_blank: true, input_html: { class: 'form-control' }
-      .row
-        .input-container.col-xs-12
-          = f.input :from, disabled: true, required: true, input_html: { class: 'form-control' }, placeholder: 'email1@example.com'
+          = f.input :reply_to_type, collection: f.object.recipient_types, include_blank: true, input_html: { class: 'form-control' }
       .row
         .input-container.col-xs-12
-          = f.input :subject, placeholder: 'Hello {{user.first_name}}, provide subject', disabled: true, required: true, input_html: { class: 'form-control' }, hint: "Provide liquid string"
+          = f.input :from, required: true, input_html: { class: 'form-control' }, placeholder: 'email1@example.com'
+      .row
+        .input-container.col-xs-12
+          = f.input :subject, placeholder: 'Hello {{user.first_name}}, provide subject', required: true, input_html: { class: 'form-control' }, hint: "Provide liquid string"
       - if defined? @workflow_step.associated_class.constantize::CUSTOM_OPTIONS
         = f.simple_fields_for :custom_options, OpenStruct.new(f.object.custom_options) do |custom_option_form|
           - @workflow_step.associated_class.constantize::CUSTOM_OPTIONS.each do |custom_option|
@@ -48,7 +48,7 @@
       %h4 Sms Settings
       .row
         .input-container.col-xs-6
-          = f.input :template_path, collection: @custom_smses, disabled: true, required: true, input_html: { class: 'form-control' }, hint: "You can add custom sms template in Manage -> Smses"
+          = f.input :template_path, collection: @custom_smses, required: true, input_html: { class: 'form-control' }, hint: "You can add custom sms template in Manage -> Smses"
 
   %br
   = f.button :submit, 'Save', class: 'btn btn-blue pull-right'
