IDM-40 add max length validation

--- a/app/community_views/instance_admin/projects/project_types/index.html.haml
+++ b/app/community_views/instance_admin/projects/project_types/index.html.haml
@@ -7,5 +7,7 @@
           - @project_types.each do |resource|
             %tr
               %td= resource.name.humanize
+              %td
+                = link_to t('instance_admin.manage.service_types.custom_validators'), instance_admin_projects_project_type_custom_validators_path(resource), class: 'pull-left btn btn-blue btn-bottom-margin'
               %td= link_to 'Edit', edit_instance_admin_projects_project_type_path(resource), class: 'pull-right'
 
