--- a/app/community_views/shared/_person.html.haml
+++ b/app/community_views/shared/_person.html.haml
@@ -21,5 +21,5 @@
       = render partial: "shared/follow_button", locals: { object: user, css_class: "tiny" }
     %h3.hx
       = link_to user.name, user_path(user)
-    %p= user.properties.try(:biography)
+    %p= user.properties.try(:short_bio)
     = user.decorate.display_address
