--- a/app/community_views/shared/_person.html.haml
+++ b/app/community_views/shared/_person.html.haml
@@ -13,7 +13,7 @@
     %ul.numbers
       %li
         = t :projects
-        %span= user.all_projects.count
+        %span= user.all_projects_count
       %li
         = t :followers
         %span= user.followers_count
