NM-3408 search for ITP, adds default user_profile, removes custom_attributes and categories from user

--- a/app/assets/stylesheets/sections/listings/_search.scss
+++ b/app/assets/stylesheets/sections/listings/_search.scss
@@ -906,6 +906,13 @@ section.search section#results.list {
     }
   }
 
+  article.listing.user {
+    .heading {
+      height: 43px;
+    }
+  }
+
+
   @media (max-width: $search-bar-breakpoint-desktop) {
     margin-top: 125px;
   }
