--- a/app/community_views/onboarding/finish.html.haml
+++ b/app/community_views/onboarding/finish.html.haml
@@ -4,9 +4,10 @@
   .contain
     = simple_form_for @user, url: wizard_path, html: { class: 'form-a', method: :put } do |f|
       .fields
-        = f.simple_fields_for :properties, f.object.properties do |properties_form|
-          - @custom_attributes.each do |attribute|
-            = draw_attribute_for_form(attribute, properties_form)
+        = f.simple_fields_for :default_profile do |default_profile_form|
+          = default_profile_form.simple_fields_for :properties, default_profile_form.object.properties do |properties_form|
+            - (default_profile_form.object.instance_profile_type.try(:custom_attributes) || []).each do |attribute|
+              = draw_attribute_for_form(attribute, properties_form)
 
         %p
           = t :more_info, scope: [:onboarding]
