--- a/app/community_views/registrations/_edit_profile.html.haml
+++ b/app/community_views/registrations/_edit_profile.html.haml
@@ -3,11 +3,10 @@
   = simple_form_for resource, url: registration_path(resource_name), html: { class: 'form-a' } do |f|
     .fields
       = f.input :name
-      = f.simple_fields_for :properties, f.object.properties do |properties_form|
-        - if f.object.instance_profile_type
-          - f.object.instance_profile_type.custom_attributes.each do |attribute|
+      = f.simple_fields_for :default_profile do |default_profile_form|
+        = default_profile_form.simple_fields_for :properties, default_profile_form.object.properties do |properties_form|
+          - (default_profile_form.object.instance_profile_type.try(:custom_attributes) || []).each do |attribute|
             = draw_attribute_for_form(attribute, properties_form)
-
       %p
         = t :more_info, scope: [:onboarding]
 
