--- a/app/new_ui_views/registrations/attributes/_properties.html.haml
+++ b/app/new_ui_views/registrations/attributes/_properties.html.haml
@@ -1,3 +1,5 @@
-= f.simple_fields_for :properties, f.object.properties do |properties_form|
-  - (f.object.instance_profile_type.try(:custom_attributes) || []).each do |attribute|
-    = draw_attribute_for_form(attribute, properties_form) if only_inputs.empty? || only_inputs.include?(attribute.name.to_sym)
+= f.simple_fields_for :default_profile do |default_profile_form|
+  = default_profile_form.simple_fields_for :properties, default_profile_form.object.properties do |properties_form|
+    - (default_profile_form.object.instance_profile_type.try(:custom_attributes) || []).each do |attribute|
+      = draw_attribute_for_form(attribute, properties_form) if only_inputs.empty? || only_inputs.include?(attribute.name.to_sym)
+
