--- a/app/views/instance_admin/manage/search/show.html.haml
+++ b/app/views/instance_admin/manage/search/show.html.haml
@@ -10,8 +10,8 @@
       .input-container.col-xs-6
         = f.label :listing_type_order
         %ul.sortable{ data: { update_url: sort_transactable_types_instance_admin_manage_search_path}}
-          - @transactable_types.each do |tt|
-            %li{id: "tt_#{tt.id}"}= tt.name
+          - (@transactable_types + @instance_profile_types).sort_by(&:position).each do |tt|
+            %li{id: (tt.is_a?(InstanceProfileType) ? "pt_#{tt.id}" : "tt_#{tt.id}")}= tt.name
 
     = content_for :header_buttons do
       = f.button :submit, t('instance_admin.save'), class: 'btn btn-blue pull-right', data: { 'submit-form' => 1, 'form-selector' => 'form' }
