--- a/app/views/search/_header.html.haml
+++ b/app/views/search/_header.html.haml
@@ -7,6 +7,7 @@
             = hidden_field_tag geofield, ''
         = hidden_field_tag :v, result_view
         = hidden_field_tag :transactable_type_id, @transactable_type.id
+        = hidden_field_tag :transactable_type_class, @transactable_type.class.name
         = hidden_field_tag :lntype, @searcher.search.lntype
         = hidden_field_tag :ignore_search_event, 0
         = hidden_field_tag :page, 1
@@ -21,10 +22,11 @@
         .row-fluid
           .span12
             .list-map-toggle.span2
-              %a.list{ href: search_path(params.merge(v: 'list')), class: active_class(result_view, 'list'), title: t('search.header.list'), data: { view: 'list' } }
-                = t('search.header.list')
-              %a.map{ href: search_path(params.merge(v: @transactable_type.default_search_view)), class: active_class(result_view, @transactable_type.default_search_view), title: t('search.header.map'), data: { view: @transactable_type.default_search_view } }
-                = t('search.header.map')
+              - unless @transactable_type.is_a?(InstanceProfileType)
+                %a.list{ href: search_path(params.merge(v: 'list')), class: active_class(result_view, 'list'), title: t('search.header.list'), data: { view: 'list' } }
+                  = t('search.header.list')
+                %a.map{ href: search_path(params.merge(v: @transactable_type.default_search_view)), class: active_class(result_view, @transactable_type.default_search_view), title: t('search.header.map'), data: { view: @transactable_type.default_search_view } }
+                  = t('search.header.map')
             .geolocation-input{ :class => (@searcher.transactable_type.fulltext_geo_search? ? 'span3' : 'span6')}
               .geolocation
                 %span.ico-crosshairs
