--- a/app/views/search/_list_results.html.haml
+++ b/app/views/search/_list_results.html.haml
@@ -1,8 +1,11 @@
 - if @searcher.result_count > 0
   %section#results.list
-    - @searcher.results.each do |listing|
-      - cache i18n_cache_key('list', listing, listing.company, (current_user.try(:has_friends) ? current_user : nil)) do
-        = render partial: 'search/list/listing', locals: { listing: listing, current_user: current_user, user_has_firends: current_user.try(:has_friends) }
+    - @searcher.results.each do |result|
+      - if result.is_a?(User)
+        = render partial: 'search/list/user', locals: { user: result, current_user: current_user, user_has_firends: current_user.try(:has_friends) }
+      - else
+        - cache i18n_cache_key('list', result, result.company, (current_user.try(:has_friends) ? current_user : nil)) do
+          = render partial: 'search/list/listing', locals: { listing: result, current_user: current_user, user_has_firends: current_user.try(:has_friends) }
     = will_paginate @searcher.results
     = render 'shared/loading_spinner'
 - else
