--- a/app/assets/stylesheets/sections/_sign-up.css.scss
+++ b/app/assets/stylesheets/sections/_sign-up.css.scss
@@ -2,11 +2,11 @@
 
   .box {
     max-width: 570px;
-    margin: 0px auto;
+    margin: 0px auto 60px;
   }
 
   #service_buttons {
-    
+
     .btn {
       $service-icons: sprite-map("sections/space-wizard/signup/service-icons/*.png");
       @include border-radius(0);
@@ -16,7 +16,7 @@
       text-align: center;
 
       @each $service in (twitter, facebook, linkedin) {
-        
+
         i.icon-#{$service} {
           display: inline-block;
           vertical-align: text-top;
@@ -72,52 +72,52 @@
     }
   }
 
-  .btn.facebook, 
+  .btn.facebook,
   .btn.linkedin {
-    
+
     @media (min-width: $ipad-width) {
       margin-right: 2%;
-    }    
+    }
   }
 
   .btn.linkedin {
-    
+
     &:hover {
       background: darken(#4875B4, 15%);
     }
   }
 
   .btn.twitter {
-    
+
     &:hover {
       background: darken(#33CCFF, 15%);
-    }  
+    }
   }
 
   .btn.facebook {
-    
+
     &:hover {
       background: darken(#3B5998, 15%);
-    }  
-  }  
-  
+    }
+  }
+
   &.decline {
 	margin: 100px 0 0 0;
-	
+
 	.box {
-      
+
       h2 {
         margin: 0 0 20px 0;
       }
-      
+
 	}
-	
+
   }
 
   #tos-error {
     margin-left: 200px;
   }
-  
+
 }
 
 .modal-content {
@@ -131,32 +131,32 @@
 }
 
 .sign-up-modal {
-  
+
 
   // Fix hr's existing modal
-  
+
   form {
     overflow: visible;
   }
-  
+
   #signup {
     margin: 0;
-    
+
     .span8.offset2 {
       margin: 0;
       width: 100%;
-      
+
       .box {
         margin: 0;
         padding: 0;
         background: transparent;
       }
-      
+
       .box header {
         background: transparent;
         padding: 10px 30px;
-      }      
-    }    
+      }
+    }
   }
 
   p.notice {
@@ -164,6 +164,6 @@
     color: gray2;
     margin: .5em 0;
     font-weight: 600px;
-  }     
+  }
 }
 
