--- a/app/new_ui_views/dashboard/company/locations/_location_form.html.haml
+++ b/app/new_ui_views/dashboard/company/locations/_location_form.html.haml
@@ -3,8 +3,7 @@
 - unless only_inputs.include?(:currency)
   = render 'dashboard/shared/fields/approval_requests', f: f
 
-- if f.object.name_and_description_required
-  = f.input :name, :as => :limited_string, :limit => 50, :hint => t('simple_form.hints.location.name') if only_inputs.empty? || only_inputs.include?(:name)
+= f.input :name, :as => :limited_string, :hint => t('simple_form.hints.location.name'), :required => f.object.validation_for(:name).try(:is_required?) if only_inputs.empty? || only_inputs.include?(:name)
 
 - if only_inputs.empty? || only_inputs.include?(:address)
   = f.simple_fields_for :location_address, (f.object.location_address.presence || f.object.build_location_address) do |address_form|
@@ -12,8 +11,7 @@
 
 = f.input :time_zone, default: f.object.company.time_zone, input_html: { class: 'selectpicker', "data-live-search" => "true" } if only_inputs.empty? || only_inputs.include?(:time_zone)
 
-- if f.object.name_and_description_required
-  = f.input :description, :as => :limited_text, :limit => 250, :required => !f.object.listings.first.try(:description).try(:present?), :input_html => { :maxlength => 250, :rows => 2 } if only_inputs.empty? || only_inputs.include?(:description)
+= f.input :description, :as => :limited_text, :required => f.object.validation_for(:description).try(:is_required?), :input_html => { :rows => 2 } if only_inputs.empty? || only_inputs.include?(:description)
 
 - if platform_context.instance.location_types.many?
   = f.association :location_type, :collection => platform_context.instance.location_types, input_html: {class: 'selectpicker'} if only_inputs.empty? || only_inputs.include?(:location_type)
