IDM-40 - Minor chores and validations

--- a/app/community_views/comments/_activity_feed_comments.html.haml
+++ b/app/community_views/comments/_activity_feed_comments.html.haml
@@ -4,7 +4,7 @@
   - if current_user
     = simple_form_for [comment.commentable, comment], remote: true  do |f|
 
-      = f.input :body, label: false, input_html: { data: {'new-comment-for': comment.commentable.id }, cols: 40, rows: 3 }
+      = f.input :body, label: false, input_html: { maxlength: 5000, data: {'new-comment-for': comment.commentable.id }, cols: 40, rows: 3 }
 
       %p.action
         = f.submit I18n.t('activity_feed.user_status_submit'), class: 'button-a tiny'
