--- a/app/community_views/shared/_activity_status_header.html.haml
+++ b/app/community_views/shared/_activity_status_header.html.haml
@@ -1,9 +1,7 @@
-- if event.followed.present?
-  - activity_feed_event = setup_activity_feed_event(event, target)
-  %header
-    %figure= activity_feed_event.image.present? ? image_tag(activity_feed_event.image) : space_listing_placeholder_path(width: 80, height: 80)
-    %p.desc= activity_feed_event.text
+%header
+  %figure= formatted_event.image.present? ? image_tag(formatted_event.image) : space_listing_placeholder_path(width: 80, height: 80)
+  %p.desc= formatted_event.text
 
-    %p.meta
-      %time
-        = l(event.created_at, format: :full_date)
+  %p.meta
+    %time
+      = l(event.created_at, format: :full_date)
