--- a/app/assets/stylesheets/new_ui/_panel.scss
+++ b/app/assets/stylesheets/new_ui/_panel.scss
@@ -121,6 +121,7 @@
     .options {
         display: none;
         padding-top: 9px;
+        padding-bottom: 9px;
 
         @media (min-width: $screen-desktop) {
             display: block;
