--- a/app/new_ui_views/dashboard/company/transactables/index.html.haml
+++ b/app/new_ui_views/dashboard/company/transactables/index.html.haml
@@ -1,29 +1,22 @@
 - title t "dashboard.transactables.manage"
 - content_for :page_header do
-  %h1= yield :title
+  %h1
+    %span.hidden-xs= t('dashboard.transactables.title.manage')
+    = t('dashboard.transactables.title.listings')
 
-
--# top navigation in listing, this has to be duplicated
--# for different mobile / desktop elements
-
-%nav.panel-nav-mobile.visible-sm.visible-xs
-  = dropdown_menu @transactable_type.translated_bookable_noun(10), { wrapper_class: 'links' } do
-    - TransactableType.services.each do |transactable_type|
-      %li{class: transactable_type == @transactable_type ? "active" : ""}
-        = link_to transactable_type.translated_bookable_noun(10), dashboard_company_transactable_type_transactables_path(transactable_type)
-
-  .options
+  .options.visible-sm.visible-xs
     = link_to new_dashboard_company_transactable_type_transactable_path(@transactable_type), class: "btn btn-primary" do
       %span.fa.fa-plus
       = t('dashboard.items.new_listing_short')
 
 
-%nav.panel-nav.hidden-xs.hidden-sm
-  %ul.tabs.pull-left
-    - TransactableType.services.each do |transactable_type|
-      %li{class: transactable_type == @transactable_type ? "active" : ""}
-        = link_to transactable_type.translated_bookable_noun(10), dashboard_company_transactable_type_transactables_path(transactable_type)
+- content_for :panel_navigation_links do
+  - TransactableType.services.each do |transactable_type|
+    %li{class: transactable_type == @transactable_type ? "active" : ""}
+      = link_to transactable_type.translated_bookable_noun(10), dashboard_company_transactable_type_transactables_path(transactable_type)
 
+
+- content_for :panel_options do
   .pull-right.options
     - if HiddenUiControls.find('dashboard/transactables/bulk_upload').visible?
       = link_to t('data_upload.manage.bulk_upload'), new_dashboard_company_transactable_type_data_upload_path(@transactable_type), data: { modal: true }
@@ -33,49 +26,27 @@
       = t('dashboard.items.new_listing_full', type: @transactable_type.translated_bookable_noun(10))
 
 
+%nav.panel-nav-mobile.visible-sm.visible-xs{role: 'navigation'}
+  = dropdown_menu @transactable_type.translated_bookable_noun(10), { wrapper_class: 'links' } do
+    = yield :panel_navigation_links
 
-.panel
-  .panel-body
+- if TransactableType.services.size > 3
+  .row
+    .col-md-3
+      %nav.hidden-xs.hidden-sm{role: 'navigation'}
+        %ul.nav.nav-pills.nav-stacked
+          = yield :panel_navigation_links
 
-    - if HiddenUiControls.find('dashboard/transactables/search').visible?
-      = dashboard_simple_form_for '', :url => dashboard_company_transactable_type_transactables_path(@transactable_type), method: :get, html: { class: 'search' } do |f|
-        = f.input :query, as: :search, label: t('dashboard.items.search.search_your_products'), input_html: { value: params[:query] }, label_html: { class: 'sr-only' }
-        = f.button :submit, t('dashboard.items.search.search'), class: "hidden-xs hidden-sm btn btn-default"
+    .col-md-9
+      %nav.panel-nav.hidden-xs.hidden-sm
+        = yield :panel_options
+      = render 'listing'
 
-    -#
-      .listing-actions.hidden-sm.hidden-xs
-        .select-all.checkbox-standalone
-          = check_box_tag :select_all
-          = label_tag :select_all
+- else
+  %nav.panel-nav.hidden-xs.hidden-sm
+    %ul.tabs.pull-left
+      = yield :panel_navigation_links
+    = yield :panel_options
 
-        = dropdown_menu t('dashboard.items.bulk_actions.label'), { toggler_class: 'btn-link' } do
-          %li
-            %a{:href => "#"}
-              = t('dashboard.items.bulk_actions.publish')
-          %li
-            %a{:href => "#"}
-              = t('dashboard.items.bulk_actions.delete')
-
-
-  - if @transactables.empty?
-    %p.empty-resultset= t('dashboard.items.empty', name: @transactable_type.name.pluralize.downcase)
-  - else
-    %table.table.table-listing
-      %thead.hidden-sm.hidden-xs
-        %tr
-          -# %td
-          %th.thumb{:scope => "col"}= t('dashboard.items.columns.photo')
-          %th.name{:scope => "col"}= t('dashboard.items.columns.name')
-          %th.location{:scope => "col"}
-            = @transactable_type.skip_location? ? t('dashboard.items.columns.quantity') : t('dashboard.items.columns.location')
-          %th.price{:scope => "col"}= t('dashboard.items.columns.price')
-          %th.added{:scope => "col"}= t('dashboard.items.columns.added')
-          %td.actions
-      %tbody
-        = render @transactables
-
-= will_paginate_dashboard @transactables
-
-
-
+  = render 'listing'
 
