NM-3408A fixes categories for review page

--- a/app/views/registrations/_attributes.html.haml
+++ b/app/views/registrations/_attributes.html.haml
@@ -45,4 +45,5 @@
   - category_name = only_inputs.first.to_s.split(" - ")[1]
   - category = Category.users.roots.where(name: category_name).first
   -if category.present?
-    = render partial: 'shared/category_old_bootstrap', locals: { category: category, f: f }
+    = f.simple_fields_for :default_profile do |f|
+      = render partial: 'shared/category_old_bootstrap', locals: { category: category, f: f }
