--- a/app/assets/stylesheets/new_ui/forms/_images.scss
+++ b/app/assets/stylesheets/new_ui/forms/_images.scss
@@ -49,7 +49,7 @@
         z-index: 200;
 
         .bar {
-            @include progressbar($brand-primary, 'absolute');
+            @include progressbar($brand-primary, absolute);
             left: 0;
             top: 0;
             bottom: 0;
