--- a/app/views/shared/_checkout_extra_fields.html.haml
+++ b/app/views/shared/_checkout_extra_fields.html.haml
@@ -24,7 +24,7 @@
           - if attribute.public? && buyer_profile_form.object.field_blank_or_changed?(attribute.name)
             = draw_attribute_for_form(attribute, properties_form)
 
-      - buyer_profile_form.object.instance_profile_type.try(:categories).try(:roots).find_each do |category|
+      - buyer_profile_form.object.instance_profile_type.try(:categories).try(:roots).try(:find_each) do |category|
         - if buyer_profile_form.object.category_blank_or_changed?(category)
           = render partial: 'shared/category_old_bootstrap', locals: { category: category, f: buyer_profile_form, categorizable: buyer_profile_form.object.instance_profile_type }
 
