NM-3499 fixing custom availability rules for locations

--- a/app/new_ui_views/dashboard/company/locations/_location.html.haml
+++ b/app/new_ui_views/dashboard/company/locations/_location.html.haml
@@ -1,5 +1,5 @@
 - is_hidden = defined?(f) && f.object.location_id != location.id
-%span{:"data-location-id" => location.id, hidden: defined?(f) ? is_hidden : false }
+%span{data: { "location-id" => location.id, availability: pretty_availability_sentence(location.availability).to_s }, hidden: defined?(f) ? is_hidden : false }
   |
   = link_to t('dashboard.location.edit'), edit_dashboard_company_location_path(location, should_check_address: @transactable_type.try(:rental_shipping)), data: { modal: true }
   - if !defined?(f) || f.object.location_id != location.id
