--- a/app/new_ui_views/dashboard/company/locations/update.js.erb
+++ b/app/new_ui_views/dashboard/company/locations/update.js.erb
@@ -12,6 +12,7 @@
 
   actionsContainer.find('[data-location-id="<%= @location.id %>"]').remove();
   actionsContainer.append('<%= escape_javascript( render @location ) %>');
+  $('label[for="availability_rules_defer"] p').html("<%= pretty_availability_sentence(@location.availability).to_s %>");
 
   $('main').prepend('<%= escape_javascript( render "dashboard/shared/flash") %>');
 
