--- a/app/new_ui_views/locations/_location_form.html.haml
+++ b/app/new_ui_views/locations/_location_form.html.haml
@@ -34,7 +34,7 @@
 
 - if only_inputs.empty? || only_inputs.include?(:availability_rules)
   .control-group
-    = render :partial => 'availability_rules/form', :locals => { :f => f }
+    = render 'dashboard/company/transactables/form_fields/availability', f: f, id_prefix: 'user_companies_locations_availability_template_id'
 
 - unless instance.location_amenity_types.count.zero?
   = f.association :amenities, :collection => instance.location_amenity_types.order(:name), :as => :grouped_select, :group_method => :amenities, :group_label_method => :name, :blank => false, :input_html => { 'data-placeholder' => "Select one or more", :class => 'custom-select', :multiple => true } if only_inputs.empty? || only_inputs.include?(:amenities)
