IDM-71 turn string which looks like link into link

--- a/app/community_views/shared/_activity_status_body.html.haml
+++ b/app/community_views/shared/_activity_status_body.html.haml
@@ -16,6 +16,6 @@
           = image.present? ? image_tag(image) : image_tag(space_listing_placeholder_path(width: 80, height: 80))
     %section
       %h3.hx= title if title.present?
-      %p= body
+      %p= auto_link(body, html: { target: '_blank', ref: 'nofollow' })
 
     = render 'shared/activity_status_footer', event: event
